--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -1269,22 +1269,26 @@ for the high-frequency parts.
 We use a high-frequency form to fit the Green's function and interaction
 given by
 \begin{align}
- W(i\nu_n)    &\approx w_0 + \frac{w_2}{(i\nu_n)^2} \ \in \mathbb{R} \\
+ W(i\nu_n)    &\approx w_0 + \frac{w_1}{i\nu_n} + \frac{w_2}{(i\nu_n)^2}  \\
  G(i\omega_n) &\approx  \frac{1}{i\omega_n} + \frac{g_2}{(i\omega_n)^2} 
 \end{align}
+The screened interactin $W$ on the Matsubara axis can in general be complex
+and thus has a term $\sim 1/i\nu_n$ for non-degenerate orbitals 
+due to the local projection (as discussed with Ferdi).
 We need to evaluate the following high-frequency terms (orbital/spin etc indices
 are suppressed, and the $j=n$ term is taken out because
 the form of $W$ diverges at this point)
 \begin{align}
 & -\frac{1}{\beta}\sum_{j\neq n} 
-  \left( w_0 + \frac{w_2}{(i\omega_n -ix_j)^2} \right)
+  \left( w_0 + \frac{w_1}{i\omega_n -ix_j} + \frac{w_2}{(i\omega_n -ix_j)^2} \right)
   \left( \frac{1}{ix_j} + \frac{g_2}{(ix_j)^2} \right)
    \mathrm{e}^{ix_j \Delta} \\
 % 
 &= -\frac{1}{\beta} \sum_{j\neq n}
 \left( 
   \frac{w_0}{ix_j} + \frac{w_0 g_2}{(ix_j)^2}
-+ \frac{w_2}{ix_j(i\omega_n -ix_j)^2} + \frac{w_2g_2}{(ix_j)^2 (i\omega_n -ix_j)^2}
++ \frac{w_1}{ix_j(i\omega_n -ix_j)} + \frac{w_1g_2}{(ix_j)^2(i\omega_n -ix_j)}  \right.\nonumber\\
+&\hspace{2.5cm}+ \left.\frac{w_2}{ix_j(i\omega_n -ix_j)^2} + \frac{w_2g_2}{(ix_j)^2 (i\omega_n -ix_j)^2}
 \right)
 \mathrm{e}^{ix_j \Delta}.
 \end{align}
@@ -1302,13 +1306,29 @@ The second term
 &= -w_0 g_2\left( \frac{\beta}{(2n+1)^2\pi^2} + \frac{-2\Delta-\beta}{4} \right)   \\
 &=  w_0 g_2\beta\left( \frac{1}{4} -\frac{1}{(2n+1)^2\pi^2} \right) .
 \end{align}
-The third term (using Maple software)
+The third term
+(we set the exponential term directly to zero since these sums converge, so the limit and sum can be
+swapped)
+\begin{align}
+-\frac{1}{\beta} \sum_{j\neq n}  \frac{w_1}{i\omega_n-i\nu_j} \frac{1}{ix_j} 
+&= \frac{w_1}{\beta} \sum_{j\neq n}  \frac{1}{2(n-j)\frac{\pi}{\beta} (2j+1)\frac{\pi}{\beta}} \\
+&= \frac{w_1\beta}{2\pi^2} \sum_{j\neq n}  \frac{1}{(n-j)(2j+1)} \\
+&= -\frac{ w_1 \beta }{(2n+1)^2 \pi^2} ,
+\end{align}
+The fourth term becomes
+\begin{align}
+-\frac{1}{\beta} \sum_{j\neq n}  \frac{w_1}{i\omega_n-i\nu_j} \frac{g_2}{(ix_j)^2} 
+&= -i\frac{w_1g_2}{\beta} \sum_{j\neq n}  \frac{1}{2(n-j)\frac{\pi}{\beta} (2j+1)^2\frac{\pi^2}{\beta^2}} \\
+&= -i\frac{w_1 g_2 \beta^2}{2\pi^3} \sum_{j\neq n}  \frac{1}{(n-j)(2j+1)^2} \\
+&= -i\frac{w_1 g_2 \beta^2}{(2n+1)^3 \pi} \left( n^2 + n + \frac{1}{4} - \frac{2}{\pi^2} \right).
+\end{align}
+The fifth term (using Maple software)
 \begin{align}
 -\frac{1}{\beta} \sum_{j\neq n}  \frac{w_2}{ix_j(i\omega_n -ix_j)^2} \mathrm{e}^{ix_j \Delta} 
 &= i\frac{w_2\beta^2}{\pi^3}\left( \frac{1}{(2n+1)^3} - \frac{\pi^2}{12(2n+1)} \right) \\
 &= i\frac{w_2\beta^2}{(2n+1)\pi^3}\left( \frac{1}{(2n+1)^2} - \frac{\pi^2}{12} \right) 
 \end{align}
-The fourth term (using Maple software)
+The sixth term (using Maple software)
 \begin{align}
 -\frac{1}{\beta} \sum_{j\neq n}  \frac{w_2g_2}{(ix_j)^2 (i\omega_n -ix_j)^2} \mathrm{e}^{ix_j \Delta} 
 &= \frac{w_2g_2\beta^3}{4\pi^4}\left( \frac{12}{(2n+1)^4} - \frac{\pi^2}{3(2n+1)^2} - \frac{\pi^2}{(2n+1)^2} \right) \\
@@ -1325,13 +1345,17 @@ With this, the final expression implemented in the Code is then given by
    & \hspace{2cm}-\frac{1}{\beta}\sum_{j\neq n}^{\pm N_{max}} 
    \Big[ \braket{m k | W(i\omega_n- ix_j ) |k m}  G^{\sigma}_{k}(ix_j) \nonumber \\
 %
-   &\hspace{3.8cm} -\braket{m k |\left( w_0 + \frac{w_2}{(i\omega_n- ix_j)^2}\right) |k m} 
-       \left( \frac{1}{ix_j} + \frac{g_2}{(ix_j)^2} \right)  \Big]\nonumber \\
+   &\hspace{3.8cm} -\left( w^{mk}_0 + \frac{w^{mk}_1}{i\omega_n -ix_j} + \frac{w^{mk}_2}{(i\omega_n- ix_j)^2}\right)
+       \left( \frac{1}{ix_j} + \frac{g^k_2}{(ix_j)^2} \right)  \Big]\nonumber \\
    %
-& +w_0 \left( \frac{1}{i(2n+1)\pi} -\frac{1}{2} \right) 
-  + w_0 g_2\beta\left( \frac{1}{4} -\frac{1}{(2n+1)^2\pi^2} \right) \nonumber \\
-& + i\frac{w_2\beta^2}{(2n+1)\pi^3}\left( \frac{1}{(2n+1)^2} - \frac{\pi^2}{12} \right) 
-  + \frac{w_2g_2\beta^3}{(2n+1)^2\pi^4}\left( \frac{3}{(2n+1)^2} - \frac{\pi^2}{3} \right) \Bigg] .
+& +w^{mk}_0 \left( \frac{1}{i(2n+1)\pi} -\frac{1}{2} \right) 
+  + w^{mk}_0 g^k_2\beta\left( \frac{1}{4} -\frac{1}{(2n+1)^2\pi^2} \right) \nonumber \\
+%
+& -\frac{ w^{mk}_1 \beta }{(2n+1)^2 \pi^2} 
+  -i\frac{w^{mk}_1 g^k_2 \beta^2}{(2n+1)^3 \pi} \left( n^2 + n + \frac{1}{4} - \frac{2}{\pi^2} \right)\nonumber \\
+%
+& + i\frac{w^{mk}_2\beta^2}{(2n+1)\pi^3}\left( \frac{1}{(2n+1)^2} - \frac{\pi^2}{12} \right) 
+  + \frac{w^{mk}_2g^k_2\beta^3}{(2n+1)^2\pi^4}\left( \frac{3}{(2n+1)^2} - \frac{\pi^2}{3} \right) \Bigg] .
  \end{align}
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -1438,35 +1462,7 @@ we get the following expression
 \end{cases}.
 \end{align}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Complex term in $W$?}
-To be checked:
-
-It seems that the screening can make $W$ complex and it takes the form
-\begin{align}
- W(i\nu_n)    &\approx w_0 + \frac{w_1}{i\nu_n} + \frac{w_2}{(i\nu_n)^2} .
-\end{align}
-Including this term, we have to calculate two additional contributions:
-(we set the exponential term directly to zero since these sums converge, so the limit and sum can be
-swapped)
-\begin{align}
--\frac{1}{\beta} \sum_{j\neq n}  \frac{w_1}{i\omega_n-i\nu_j} \frac{1}{ix_j} 
-&= \frac{w_1}{\beta} \sum_{j\neq n}  \frac{1}{2(n-j)\frac{\pi}{\beta} (2j+1)\frac{\pi}{\beta}} \\
-&= \frac{w_1\beta}{2\pi^2} \sum_{j\neq n}  \frac{1}{(n-j)(2j+1)} \\
-&= -\frac{ w_1 \beta }{(2n+1)^2 \pi^2} ,
-\end{align}
-and 
-\begin{align}
--\frac{1}{\beta} \sum_{j\neq n}  \frac{w_1}{i\omega_n-i\nu_j} \frac{g_2}{(ix_j)^2} 
-&= -i\frac{w_1g_2}{\beta} \sum_{j\neq n}  \frac{1}{2(n-j)\frac{\pi}{\beta} (2j+1)^2\frac{\pi^2}{\beta^2}} \\
-&= -i\frac{w_1 g_2 \beta^2}{2\pi^3} \sum_{j\neq n}  \frac{1}{(n-j)(2j+1)^2} \\
-&= -i\frac{w_1 g_2 \beta^2}{(2n+1)^3 \pi} \left( n^2 + n + \frac{1}{4} - \frac{2}{\pi^2} \right).
-\end{align}
- 
- 
- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
